--- a/index.html
+++ b/index.html
@@ -8,36 +8,78 @@
   <link rel="stylesheet" type="text/css" href="src/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  <script src="src/main.ts" defer></script>
   <title>Ethan Honzik</title>
 </head>
 
 <body id="background">
   <nav id="navbar" class="container-fluid nav blur">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><strong><a href="index.html">Home</a></strong></li>
     </ul>
     <ul>
       <li><a>Games</a></li>
       <li><a>Projects</a></li>
-      <li><button href="https://github.com/Ethan-C-Honzik" style="background: rgba(0, 0, 0, 0); border: none;"><img
-            src="/github-mark-white.svg" style="height: 6vh; object-fit: contain;"></button></li>
+      <li><a href="https://github.com/Ethan-C-Honzik" style="background: rgba(0, 0, 0, 0); border: none;"><img
+            src="/github-mark-white.svg" style="height: 3rem;"></a></li>
     </ul>
   </nav>
-  <main>
-    <
+  <br><br>
+  <main class="container">
+    <div style="height: 90vh;">
+      <article class="verticalCenter" style="background-color: transparent;">
+        <div class="grid">
+          <div></div>
+          <div>
+            <p style="margin-bottom: 0;">Hi I'm,</p>
+            <p style="margin: 0;"><span id="Name">Ethan Honzik </span>and I do:</p>
+            
+            <div class="ScrollContainer">
+              <div class="scroll">
+                <div class="RightToLeft">
+                  <p style="white-space: pre;">Backend    Embedded    PCB Design    Frontend    IOT    Lighting Design    Blender    CAD    Visual Effects    Lighting Design</p>
+                  <p style="white-space: pre;">Backend    Embedded    PCB Design    Frontend    IOT    Lighting Design    Blender    CAD    Visual Effects    Lighting Design</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div></div>
+        </div>
+      </article>
+    </div>
+    <article>
+      <h1 class="center">Luma Graph</h1>
+      <div><video class="container" src="/public/LumaGraph.mp4" autoplay="true" loop="true" muted="muted"></video></div>
+      <br>
+      <p>
+        Luma Graph is a application designed for creating procedural 1D visuals that can be used to drive LED strips or
+        to generate reactive visuals in other applications. Real time data can be streamed over the network from custom
+        VSTs that can be loaded into DAWS. This allows for reactive and expresive visuals that can be tied to specific
+        elements of a track. Visuals can either be streamed real time over the network to LED controllers or they can be
+        recorded and exported to a file. These files can then be read by other applications.
+      </p>
+    </article>
+    <article>
+      <h1 class="center">PCB Design / Embedded Development</h1>
+      <p>
+
+      </p>
+    </article>
+    <article>
+      <h1 class="center">Virtual Reality Graphics Research</h1>
+      <p>
+        CDEP
+      </p>
+    </article>
+    <article>
+      <h1 class="center">Game Development</h1>
+      <p>
+        CDEP
+      </p>
+    </article>
   </main>
   <script>
-    VANTA.NET({
-      el: "#background",
-      mouseControls: true,
-      touchControls: true,
-      gyroControls: false,
-      minHeight: 200.00,
-      minWidth: 200.00,
-      scale: 1,
-      scaleMobile: 1.00,
-      backgroundColor: 0x13171f
-    })
+
   </script>
 </body>
 
