improve into card

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="ScrollContainer">
               <div class="scroll">
                 <div class="RightToLeft">
-                  <p style="white-space: pre;">Backend    Embedded    PCB Design    Frontend    GameDev    IOT    Lighting Design    Blender    CAD    Visual Effects    Lighting Design</p>
-                  <p style="white-space: pre;">Backend    Embedded    PCB Design    Frontend    GameDev    IOT    Lighting Design    Blender    CAD    Visual Effects    Lighting Design</p>
+                  <p style="white-space: pre;">Backend    Graphics Programming   Embedded    PCB Design    Frontend    GameDev    IOT    Creative Coding   Lighting Design    Blender    CAD    Visual Effects    Music Videos   Music Production   Shaders</p>
+                  <p style="white-space: pre;">Backend    Graphics Programming   Embedded    PCB Design    Frontend    GameDev    IOT    Creative Coding   Lighting Design    Blender    CAD    Visual Effects    Music Videos   Music Production   Shaders</p>
                 </div>
               </div>
             </div>
