--- a/index.html
+++ b/index.html
@@ -1,177 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="src/pico.css" />
-    <link rel="stylesheet" type="text/css" href="src/style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
-    <script
-      type="module"
-      src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"
-    ></script>
-    <script type="module" src="/src/main.ts" defer></script>
-    <title>Ethan Honzik</title>
-  </head>
 
-  <body id="background" data-theme="dark">
-    <nav id="navbar" class="container-fluid nav blur">
-      <ul>
-        <li>
-          <strong><a href="/">Home</a></strong>
-        </li>
-      </ul>
-      <ul>
-        <li><a href="/projects/">Projects</a></li>
-        <li>
-          <a
-            href="https://github.com/Ethan-C-Honzik"
-            style="background: rgba(0, 0, 0, 0); border: none"
-            ><img src="/github-mark-white.svg" style="height: 3rem"
-          /></a>
-        </li>
-      </ul>
-    </nav>
-    <br /><br />
-    <main class="container">
-      <div style="height: 90vh">
-        <article class="verticalCenter" style="background-color: transparent">
-          <div class="grid">
-            <div></div>
-            <div id="introCard">
-              <p style="margin-bottom: 0">Hi I'm,</p>
-              <p style="margin: 0">
-                <span id="Name">Ethan Honzik </span>and I do:
-              </p>
-              <div class="ScrollContainer">
-                <div class="scroll">
-                  <div class="RightToLeft">
-                    <p>please enable javascript</p>
-                    <p>please enable javascript</p>
-                  </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="src/pico.css" />
+  <link rel="stylesheet" type="text/css" href="src/style.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+  <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
+  <script type="module" src="/src/main.ts" defer></script>
+  <title>Ethan Honzik</title>
+</head>
+
+<body id="background" data-theme="dark">
+  <nav id="navbar" class="container-fluid nav">
+    <ul>
+      <li>
+        <a href="https://github.com/Ethan-C-Honzik" style="background: rgba(0, 0, 0, 0); border: none"><img
+            src="/github-mark-white.svg" style="height: 3rem" /></a>
+      </li>
+    </ul>
+  </nav>
+  <br /><br />
+  <main class="container">
+    <div style="height: 90vh">
+      <article class="verticalCenter" style="background-color: transparent">
+        <div class="grid">
+          <div></div>
+          <div id="introCard">
+            <p style="margin-bottom: 0">Hi I'm,</p>
+            <p style="margin: 0">
+              <span id="Name">Ethan Honzik </span>and I do:
+            </p>
+            <div class="ScrollContainer">
+              <div class="scroll">
+                <div class="RightToLeft">
+                  <p>please enable javascript</p>
+                  <p>please enable javascript</p>
                 </div>
               </div>
             </div>
-            <div></div>
           </div>
-        </article>
-        <svg class="arrows">
-          <path class="a1" d="M0 0 L30 32 L60 0"></path>
-          <path class="a2" d="M0 20 L30 52 L60 20"></path>
-          <path class="a3" d="M0 40 L30 72 L60 40"></path>
-        </svg>
-      </div>
-      <div class="background-div"></div>
-      <br />
-      <h1 class="center">Some of My Work</h1>
-      <br />
-      <article>
-        <h2 class="center">Luma Graph</h2>
-        <h4 class="center">
-          A tool for building real time visuals built from scratch
-        </h4>
-        <div>
-          <video
-            class="container"
-            src="/public/LumaGraph.mp4"
-            autoplay="true"
-            loop="true"
-            muted="muted"
-          ></video>
+          <div></div>
         </div>
-        <br />
-        <p>
-          Luma Graph is a visual data flow "programming language" of sorts that
-          is used to create procedural real time visuals. I developed it from
-          scratch in unity. Initially built for creating LED strip effects, it
-          has since grown into a tool I use for creating general music visuals.
-          More info and the source are
-          <a href="https://github.com/Ethan-C-Honzik/LumaGraph"
-            >available on my github</a
-          >.
-        </p>
-        <div class="grid">
+      </article>
+      <svg class="arrows">
+        <path class="a1" d="M0 0 L30 32 L60 0"></path>
+        <path class="a2" d="M0 20 L30 52 L60 20"></path>
+        <path class="a3" d="M0 40 L30 72 L60 40"></path>
+      </svg>
+    </div>
+    <div class="background-div"></div>
+    <br />
+    <h1 class="center">Job History</h1>
+    <div class="grid">
+      <article>
+        <h2 class="center">SPS Commerce</h2>
+        <h5 class="center">Software engineer</h5>
+        <ul>
+          <li>Spearheaded development of Jira bot written in python</li>
+          <li>wrote a chrome extension that integrated a Java abstract syntax tree parser into an internal browser based
+            Java editor for live error detection</li>
+          <li>Contributed to internal python based tooling</li>
+        </ul>
+      </article>
+      <article>
+        <h2 class="center">University of St Thomas</h2>
+        <h5 class="center">Undergraduate Computer Graphics Researcher</h5>
+        <ul>
+          <li>Implemented an algorithm that can produce novel views from a collection of depth enhanced panoramas (CDEP)
+            for VR viewing</li>
+          <li>Contributed a computer shader based interpolation algorithm</li>
+          <li>Created a <a href="https://github.com/ust-vis/CDEPVR">unity implementation</a> of the algorithm</li>
+        </ul>
+      </article>
+    </div>
+    <br />
+    <h1 class="center">Some of My Work</h1>
+    <article>
+      <h2 class="center">Luma Graph</h2>
+      <h4 class="center">
+        A tool for building real time visuals built from scratch
+      </h4>
+      <div>
+        <video class="container" src="/public/LumaGraph.mp4" autoplay="true" loop="true" muted="muted"></video>
+      </div>
+      <br />
+      <p>
+        Luma Graph is a visual data flow "programming language" of sorts that
+        is used to create procedural real time visuals. I developed it from
+        scratch in unity. Initially built for creating LED strip effects, it
+        has since grown into a tool I use for creating general music visuals.
+        More info and the source are
+        <a href="https://github.com/Ethan-C-Honzik/LumaGraph">available on my github</a>.
+      </p>
+      <div class="grid">
+        <div>
           <div>
-            <div>
-              <iframe
-                style="max-width: 100%; margin: 0 auto"
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/MgWidtgZFhM?si=K4Cvaaj8SHul9dea&amp;start=35"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              ></iframe>
-              <p class="center">
-                <small>A video built in Blender utilizing Luma Graph</small>
-              </p>
-            </div>
-          </div>
-          <div>
-            <h5 class="center">Features</h5>
-            <ul>
-              <li>Able to send and receive network data</li>
-              <li>
-                <a href="https://github.com/Ethan-C-Honzik/LumaGraphVST"
-                  >Custom VST to stream audio data from a DAW</a
-                >
-              </li>
-              <li>
-                A custom recording file format that can be converted to videos
-                via a
-                <a
-                  href="https://github.com/Ethan-C-Honzik/LumaGraphVideoUtility"
-                  >custom python FFMPEG tool</a
-                >
-              </li>
-              <li>
-                Ability to group nodes into modules that can be imported into
-                other projects
-              </li>
-            </ul>
-          </div>
-          <div>
-            <img src="/Demo.jpg" style="max-width: 90%;" class="centerElement"/>
+            <iframe style="max-width: 100%; margin: 0 auto" width="560" height="315"
+              src="https://www.youtube.com/embed/MgWidtgZFhM?si=K4Cvaaj8SHul9dea&amp;start=35"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p class="center">
-              <small>A real time web implementation of a Luma Graph recording <a>viewable here</a></small>
+              <small>A video built in Blender utilizing Luma Graph</small>
             </p>
           </div>
         </div>
-      </article>
-      <article>
-        <h2 class="center">PCB Design / Embedded Development</h2>
-        <p></p>
-        <div class="grid">
-          <div>
-            <model-viewer
-              style="width: 100%; min-height: 50vh"
-              src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948"
-              ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
-              poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717"
-              alt="A 3D model of an astronaut"
-              shadow-intensity="1"
-              camera-controls=""
-              auto-rotate=""
-              ar=""
-              ar-status="not-presenting"
-            >
-            </model-viewer>
-          </div>
-          <div>Disc</div>
+        <div>
+          <h5 class="center">Features</h5>
+          <ul>
+            <li>Able to send and receive network data</li>
+            <li>
+              <a href="https://github.com/Ethan-C-Honzik/LumaGraphVST">Custom VST to stream audio data from a DAW</a>
+            </li>
+            <li>
+              A custom recording file format that can be converted to videos
+              via a
+              <a href="https://github.com/Ethan-C-Honzik/LumaGraphVideoUtility">custom python FFMPEG tool</a>
+            </li>
+            <li>
+              Ability to group nodes into modules that can be imported into
+              other projects
+            </li>
+          </ul>
         </div>
-      </article>
-      <article>
-        <h2 class="center">Virtual Reality Graphics Research</h2>
-        <p>CDEP</p>
-      </article>
-      <article>
-        <h2 class="center">Game Development</h2>
-        <p>CDEP</p>
-      </article>
-    </main>
-    <script></script>
-  </body>
+        <div>
+          <img src="/Demo.jpg" style="max-width: 90%;" class="centerElement" />
+          <p class="center">
+            <small>A real time web implementation of a Luma Graph recording <a>viewable here</a></small>
+          </p>
+        </div>
+      </div>
+    </article>
+    <article>
+      <h2 class="center">PCB Design / Embedded Development</h2>
+      <p></p>
+      <div class="grid">
+        <div>
+          <model-viewer style="width: 100%; min-height: 50vh"
+            src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.glb?1542147958948"
+            ios-src="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b/Astronaut.usdz?v=1569545377878"
+            poster="https://cdn.glitch.com/36cb8393-65c6-408d-a538-055ada20431b%2Fposter-astronaut.png?v=1599079951717"
+            alt="A 3D model of an astronaut" shadow-intensity="1" camera-controls="" auto-rotate="" ar=""
+            ar-status="not-presenting">
+          </model-viewer>
+        </div>
+        <div>Disc</div>
+      </div>
+    </article>
+    <article>
+      <h2 class="center">Virtual Reality Graphics Research</h2>
+      <p>CDEP</p>
+    </article>
+    <article>
+      <h2 class="center">Game Development</h2>
+      <p>CDEP</p>
+    </article>
+  </main>
+  <script></script>
+</body>
+
 </html>
