--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div>
           <img src="/Demo.jpg" style="max-width: 90%;" class="centerElement" />
           <p class="center">
-            <small>A real time web implementation of a Luma Graph recording <a>viewable here</a></small>
+            <small>A real time web implementation of a Luma Graph recording <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Experiments/ShaderPhonkDemo/dist/index.html">viewable here</a></small>
           </p>
         </div>
       </div>
@@ -152,7 +152,12 @@
     </article>
     <article>
       <h2 class="center">Virtual Reality Graphics Research</h2>
-      <p>CDEP</p>
+      <div class="grid">
+        <img src="/CDEP.jpg"/>
+        <p>
+          I implemented a novel CDEP algorithm in unity while working as an undergraduate computer graphics researcher
+        </p>
+      </div>
     </article>
     <article>
       <h2 class="center">Game Development</h2>
