--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li>
         <a href="https://github.com/Ethan-C-Honzik" style="background: rgba(0, 0, 0, 0); border: none"><img
-            src="/github-mark-white.svg" style="height: 3rem" /></a>
+            src="assets/github-mark-white.svg" style="height: 3rem" /></a>
       </li>
     </ul>
   </nav>
@@ -84,7 +84,7 @@
         A tool for building real time visuals built from scratch
       </h4>
       <div>
-        <video class="container" src="/public/LumaGraph.mp4" autoplay="true" loop="true" muted="muted"></video>
+        <video class="container" src="assets/LumaGraph.mp4" autoplay="true" loop="true" muted="muted"></video>
       </div>
       <br />
       <p>
@@ -127,7 +127,7 @@
           </ul>
         </div>
         <div>
-          <img src="/Demo.jpg" style="max-width: 90%;" class="centerElement" />
+          <img src="assets/Demo.jpg" style="max-width: 90%;" class="centerElement" />
           <p class="center">
             <small>A real time web implementation of a Luma Graph recording <a href="https://ethan-c-honzik.github.io/RandomWebProjects/Experiments/ShaderPhonkDemo/dist/index.html">viewable here</a></small>
           </p>
@@ -153,7 +153,7 @@
     <article>
       <h2 class="center">Virtual Reality Graphics Research</h2>
       <div class="grid">
-        <img src="/CDEP.jpg"/>
+        <img src="assets/CDEP.jpg"/>
         <p>
           I implemented a novel CDEP algorithm in unity while working as an undergraduate computer graphics researcher
         </p>
