--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <p></p>
       <div class="grid">
         <div>
-          <model-viewer src="assets/PCB.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
+          <model-viewer src="/PCB.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
             <div class="progress-bar hide" slot="progress-bar">
                 <div class="update-bar"></div>
             </div>
