--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@
             <li><a href="https://github.com/Ethan-C-Honzik/ArduinoLedServer">C++ Firmware</a> that runs on an arduino
               leonardo and sends keypresses mapped to a IR remote.
             </li>
+            <li><a href="https://github.com/Ethan-C-Honzik/MidiInput">A Java program</a> that receives midi data and
+              forwards it to <a href="https://github.com/Ethan-C-Honzik/ArduinoSerialMonophonicSynth">C++ Firmware</a>
+              over serial for audio synthesis on an Arduino.
+            </li>
           </ul>
         </div>
       </div>
@@ -200,25 +204,43 @@
       <div class="grid">
         <img src="assets/CDEP.jpg" />
         <p>
-          I implemented a novel CDEP algorithm in unity while working as an undergraduate computer graphics researcher
+          CDEP stands for collection of depth enhanced panoramas. It is algorithm for reconstructing 360 views from a
+          novel viewpoint when given a dataset of depth enhanced panoramas. Depth can either be included from a 
         </p>
       </div>
     </article>
     <article>
       <h2 class="center">Game Development</h2>
       <div class="grid">
-        <iframe style="max-width: 100%; margin: 0 auto" width="560" height="315"
-          src="https://www.youtube.com/embed/nEaSqHd7XVQ?si=ocWTGycZAbVZfFRM&amp;start=7" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <div>
+        <article>
+          <iframe style="max-width: 100%; margin: 0 auto" width="560" height="315"
+            src="https://www.youtube.com/embed/nEaSqHd7XVQ?si=ocWTGycZAbVZfFRM&amp;start=7" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </article>
+        <article>
           <p>I've been making games in some form since 2016. Though, haven't done much game development since high
             school. Back in 2017 I started a Rhythm game shown in this youtube video. I abandoned it due to scope creep
             and a general feeling that the game just wasn't very fun. It was essentially a music visualizer pretending
             to be a game. After this I tended to just make music visualizers</p>
+        </article>
+        <article>
+          <img class="centerElement" src="assets/FlappyFidget.png" style="max-height: 100%;" />
+        </article>
+      </div>
+    </article>
+    <article>
+      <h2 class="center">Freelance Blender VFX Artist</h2>
+      <div class="grid">
+        <div>
+          <p>I've done some freelance work with blender. One client I've worked with is Xeuphoria. This video was made
+            in blender for an album release</p>
         </div>
-        <img class="centerElement" src="assets/FlappyFidget.png" style="max-height: 100%;"/>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ab17-b8qhnI?si=UTavaX6NAp26-2DU"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </article>
     <br><br>
